--- a/src/assets/style-components/header/_nav-menu.scss
+++ b/src/assets/style-components/header/_nav-menu.scss
@@ -3,8 +3,20 @@
 
 .nav-menu {
     @include flex(column, flex-end, center);
+    position: absolute;
     width: 100%;
     margin-top: 4.6rem;
+
+    @include medium {
+        margin-top: 0;
+        @include flex(row, center, center);
+    }
+
+    div:last-child {
+        @include medium {
+            transform: translateX(0) !important;
+        }
+    }
 
     a.nav-menu-link {
         color: var(--text-color);
@@ -15,6 +27,11 @@
         padding-left: 2rem;
         text-decoration: none;
 
+        @include medium {
+            background: none;
+            @include flex(row, center, center);
+        }
+
         svg {
             margin-right: 0.3rem;
         }
@@ -22,6 +39,9 @@
 
     ul {
         width: 20rem;
+        @include medium {
+            @include flex(row, center, center);
+        }
     }
 
     li {
@@ -31,11 +51,19 @@
     .menu > li:last-child {
         a {
             border-bottom-left-radius: 20px;
+
+            @include medium {
+                border-radius: 0;
+            }
         }
     }
     .menu > li:first-child {
         a {
             border-top-left-radius: 20px;
+
+            @include medium {
+                border-radius: 0;
+            }
         }
     }
 }
