--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -13,4 +13,8 @@
 body {
     background-color: var(--dark-gray);
     color: var(--text-color);
+
+    @include medium {
+        margin: 5rem;
+    }
 }
